manifests/pxbbq/resources/pxbbq.yaml
---
# Dummy update 02
apiVersion: apps/v1
kind: Deployment                 
metadata:
  name: pxbbq-web  
  namespace: pxbbq  
  labels:                    
    app: pxbbq-web       
spec:
  replicas: 1                    
  selector:
    matchLabels:
      app: pxbbq-web
  template:                      
    metadata:
      labels:                    
        app: pxbbq-web
    spec: 
      containers:
      - name: pxbbq
        image: eshanks16/pxbbq:v3.3.1 #latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080    
        readinessProbe:
          httpGet:
            port: 8080
