manifests/pxbbq/resources/pxbbq-ingress-ssl.yaml

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-pxbbq
  namespace: pxbbq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - hosts:
        - www.pxbbq.com
      secretName: pxbbq-tls
  rules:
    - host: www.pxbbq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pxbbq-svc
                port:
                  number: 80
